Declaration for ProgramRegistry::portForPid() has wrong type

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 2.5.1
    • Affects Version/s: None
    • Component/s: Internal Code
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The type of the 'pid' argument for ProgramRegistry::portForPid() is incorrectly declared as 'int' (should be pid_t) in src/mongo/shell/shell_utils_launcher.h. Also, the argument name 'port' suggests the copy-and-paste error: should be 'pid'.

      src/mongo/shell/shell_utils_launcher.cpp line 75:

              int ProgramRegistry::portForPid(pid_t pid) const {
      

      src/mongo/shell/shell_utils_launcher.h line 76:

                  int portForPid( int port ) const;
      

            Assignee:
            Tad Marshall
            Reporter:
            Tad Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: