SERVER-9753 Use pid_t type for pid argument in declaration